update model for ondemand archives and setids